--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 #E46B3F
 #C4402A
 */
-.header {
+.logo {
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -15,6 +15,7 @@
   top: 0;
   width: 500px;
   height: 500px;
+  background-color: #292a44;
 }
 header {
   display: flex;
@@ -28,11 +29,11 @@ header {
   z-index: 1;
   background-color: #292a44;
 }
-.body {
+body {
   width: 100%;
   height: 100%;
   background-color: #292a44;
   position: absolute;
-  color: #ffffff;
+  color: #e46b3f;
   text-align: center;
 }
