--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,19 @@ header {
   background-color: #292a44;
 }
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
   background-color: #292a44;
   position: absolute;
-  color: #e46b3f;
+  font-family: "Secular One", sans-serif;
+  font-size: 48px;
+  color: #c4402a;
   text-align: center;
 }
